# ros-robotics-project

./: info_first.txt  info_second.txt
first_project/: CMakeLists.txt  package.xml
first_project/cfg/: CollisionThresholds.cfg
first_project/launch/: firstproject.launch
first_project/msg/: CollisionStatus.msg
first_project/src/: collision_status_node.cpp  distance_service.cpp  lla2enu_node.cpp
first_project/srv/: CalculateDistance.srv
second_project_927617/: CMakeLists.txt  package.xml
second_project_927617/launch/: localization.launch  map_optitrack.launch  map_visual.launch
second_project_927617/maps/: map_optitrack.pgm  map_optitrack.yaml  map_visual.pgm  map_visual.yaml
